AC_INIT([webapi-uiautomation-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
css3-background/Makefile \
css3-background/csswg/Makefile \
css3-background/csswg/support/Makefile \
html5-canvas/Makefile \
html5-canvas/w3c/Makefile \
html5-canvas/w3c/images/Makefile \
css3-color/Makefile \
css3-color/csswg/Makefile \
css3-color/csswg/support/Makefile \
html5-svg/Makefile \
html5-svg/w3c/Makefile \
css3-flexiblebox/Makefile \
css3-flexiblebox/csswg/Makefile \
css3-style/Makefile \
css3-style/csswg/Makefile \
css3-fonts/Makefile \
css3-fonts/csswg/Makefile \
css3-fonts/csswg/support/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
