AC_INIT([webapi-uiautomation-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
ivi-cssfilter/Makefile \
ivi-cssfilter/testscripts/Makefile \
ivi-cssfilter/testscripts/steps/Makefile \
w3c-webstorage/Makefile \
w3c-webstorage/testscripts/Makefile \
w3c-webstorage/testscripts/webstorage/Makefile \
w3c-webstorage/testscripts/webstorage/steps/Makefile \
html5-extra/testscripts/Makefile \
html5-extra/images/Makefile \
html5-extra/browsers/Makefile \
html5-extra/dom/Makefile \
html5-extra/xhtml5/Makefile \
html5-extra/testscripts/browsers/Makefile \
html5-extra/testscripts/browsers/steps/Makefile \
html5-extra/testscripts/dom/Makefile \
html5-extra/testscripts/dom/steps/Makefile \
html5-extra/testscripts/xhtml5/Makefile \
html5-extra/testscripts/xhtml5/steps/Makefile \
css3-background/Makefile \
css3-background/csswg/Makefile \
css3-background/reference/Makefile \
css3-background/csswg/support/Makefile \
css3-color/Makefile \
css3-color/csswg/Makefile \
css3-color/reference/Makefile \
css3-color/csswg/support/Makefile \
css3-flexiblebox/Makefile \
css3-flexiblebox/csswg/Makefile \
css3-flexiblebox/reference/Makefile \
css3-fonts/Makefile \
css3-fonts/csswg/Makefile \
css3-fonts/reference/Makefile \
css3-fonts/csswg/support/Makefile \
css3-style/Makefile \
css3-style/csswg/Makefile \
css3-style/reference/Makefile \
html5-svg/Makefile \
html5-svg/w3c/Makefile \
html5-svg/reference/Makefile \
html5-extra/Makefile \
html5-extra/semantics/Makefile \
html5-extra/reference/Makefile \
html5-canvas/Makefile \
html5-canvas/w3c/Makefile \
html5-canvas/w3c/images/Makefile \
html5-canvas/reference/Makefile \
w3c-csp/Makefile \
w3c-csp/reference/Makefile \
w3c-csp/support/Makefile \
w3c-csp/support/w3c/Makefile \
w3c-csp/support/khronos/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
