AC_INIT([wrt-usecase-android-tests], [6.35.1.2], [kangx.xu@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
usecase/Makefile \
usecase/wrt_integration/Makefile \
usecase/wrt_integration/cookie_check/Makefile \
usecase/wrt_integration/remote_debugging/Makefile \
usecase/wrt_integration/schemes_check/Makefile \
usecase/wrt_integration/testapp_scheme/Makefile \
usecase/wrt_integration/scheme_content/Makefile \
usecase/wrt_integration/notification_check/Makefile \
usecase/wrt_integration/copy_paste/Makefile \
usecase/wrt_integration/copy_paste_native/Makefile \

usecase/wrt_sharemode/Makefile \
usecase/wrt_sharemode/sharemode_webapp/Makefile \
usecase/wrt_sharemode/sharemode_library/Makefile \

usecase/wrt_webapp/Makefile \
usecase/wrt_webapp/webapp_taskmanager/Makefile \
usecase/wrt_webapp/webapp_operation/Makefile \
usecase/wrt_webapp/webapp_xwalkhost/Makefile \
usecase/wrt_webapp/webapp_video/Makefile \
usecase/wrt_webapp/webapp_gesture/Makefile \
usecase/wrt_webapp/webapp_openfile/Makefile \
usecase/wrt_webapp/webapp_manifest/Makefile \


usecase/wrt_splashscreen/Makefile \
usecase/wrt_splashscreen/splashscreen_landscape/Makefile \
usecase/wrt_splashscreen/splashscreen_png/Makefile \

usecase/wrt_security/Makefile \
usecase/wrt_security/security_urlcertificate/Makefile \
usecase/wrt_security/permission_api_contacts/Makefile \


usecase/wrt_extension/Makefile \
usecase/wrt_extension/extension_and_permission/Makefile \
usecase/wrt_extension/testapp_extension_permission_contacts/Makefile \
usecase/wrt_extension/testapp_extension_permission_contacts/contactextension/Makefile \

usecase/wrt_packertool/Makefile \
usecase/wrt_packertool/packertool_options2/Makefile \
usecase/wrt_packertool/packertool_compressor/Makefile \
usecase/wrt_packertool/packertool_compressor2/Makefile \
usecase/wrt_packertool/packertool_help/Makefile \
usecase/wrt_packertool/packertool_icon/Makefile \
usecase/wrt_packertool/packertool_options/Makefile \
usecase/wrt_packertool/packertool_version/Makefile \
usecase/wrt_packertool/packertool_xpk/Makefile \
usecase/wrt_packertool/packertool_versionupdate/Makefile \
 ])
AC_OUTPUT
