AC_INIT([wrt-usecase-common-tests], [6.35.1.2], [kangx.xu@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
usecase/Makefile \
usecase/csp_directive_list_tests/Makefile \
usecase/disable_device_capabilities_tests/Makefile \
usecase/extension_permission_contacts_tests/Makefile \
usecase/extension_permission_contacts_tests/contactextension/Makefile \
usecase/i18n_locales_chinese_tests/Makefile \
usecase/i18n_locales_language_tests/Makefile \
usecase/i18n_locales_noresources_tests/Makefile \
usecase/launch_fullscreen_true_tests/Makefile \
usecase/manifest_app_launchpath_tests/Makefile \
usecase/manifest_icon_jpg_tests/Makefile \
usecase/manifest_icon_one_tests/Makefile \
usecase/manifest_minimal_manifest_tests/Makefile \
usecase/manifest_name_blend_tests/Makefile \
usecase/manifest_version_identifyingfour_tests/Makefile \
usecase/packer_tool_minify_tests/Makefile \
usecase/permission_field_contacts_tests/Makefile \
usecase/permission_field_one_tests/Makefile \
usecase/security_url_certificate_tests/Makefile \
usecase/splashscreen_launchscreen_field_tests/Makefile \
usecase/splashscreen_launchscreen_png_tests/Makefile \
usecase/update_original_versionmulti_tests/Makefile \
usecase/update_original_versionone_tests/Makefile \
usecase/update_versionmulti_higher_tests/Makefile \
usecase/update_versionone_highermulti_tests/Makefile \
usecase/update_versionone_higher_tests/Makefile \
usecase/update_versionone_lower_tests/Makefile \
usecase/use_chrome_blacklist_tests/Makefile \
usecase/web_feature_notification_tests/Makefile \
usecase/web_feature_scheme_tests/Makefile \
usecase/webgl_webrtc_disable_tests/Makefile \
usecase/web_openfile_thirdpart_tests/Makefile \
usecase/web_scheme_content_tests/Makefile \
usecase/web_support_copyandpaste_tests/Makefile \
usecase/xwalk_hosts_value_tests/Makefile])
AC_OUTPUT
