AC_INIT([tct-3dtransforms-css3-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
3dtransforms/csswg/Makefile \
3dtransforms/support/Makefile \
3dtransforms/csswg/submission/Makefile \
3dtransforms/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
