commondir = resources testkit
SUBDIRS = appcontrol $(commondir)
docdir = $(prefix)/opt/tct-appcontrol-tizen-tests
dist_doc_DATA = tests.xml tests.full.xml NOTICE LICENSE.CC-BY-3.0 LICENSE.Apache-2.0 COPYING
contentsdir = $(prefix)/opt/tct-appcontrol-tizen-tests/mediasrc
dist_contents_DATA = webapi-tizen-appcontrol-test_*
