AC_INIT([tct-backgrounds-css3-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
backgrounds/Makefile \
backgrounds/support/Makefile \
backgrounds/webkit/Makefile \
backgrounds/webkit/resources/Makefile \
backgrounds/csswg/Makefile \
backgrounds/csswg/reference/Makefile \
backgrounds/csswg/support/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
