AC_INIT([tct-canvas-html5-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
canvas/w3c/common/Makefile \
canvas/w3c/fonts/Makefile \
canvas/w3c/images/Makefile \
canvas/Makefile \
canvas/support/Makefile \
canvas/w3c/Makefile \
common/Makefile resources/Makefile testkit/Makefile])
AC_OUTPUT
