commondir = resources testkit
SUBDIRS = contact $(commondir)
docdir = $(prefix)/opt/tct-contact-tizen-tests
dist_doc_DATA = tests.xml tests.full.xml NOTICE LICENSE.CC-BY-3.0 LICENSE.Apache-2.0 COPYING
sounddir = $(prefix)/opt/tct-contact-tizen-tests/mediasrc
dist_sound_DATA = *.mp3
imagedir = $(prefix)/opt/tct-contact-tizen-tests/mediasrc
dist_image_DATA = *.png
