AC_INIT([tct-csp-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
csp/Makefile \
csp/support/Makefile \
csp/support/w3c/Makefile \
csp/support/khronos/Makefile \
csp/w3c/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
