AC_INIT([tct-extra-html5-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
attributes/Makefile \
attributes/w3c/Makefile \
base64/Makefile \
base64/w3c/Makefile \
dataset/Makefile \
dataset/w3c/Makefile \
foreigncontent/Makefile \
foreigncontent/w3c/Makefile \
xhtml5/Makefile \
xhtml5/w3c/Makefile \
xhtml5/images/Makefile \
w3c/Makefile \
w3c/collections/Makefile \
w3c/semantics/Makefile \
w3c/semantics/forms/Makefile \
w3c/semantics/forms/the-input-element/Makefile \
w3c/semantics/grouping-content/Makefile \
w3c/semantics/grouping-content/the-figcaption-element/Makefile \
w3c/semantics/grouping-content/the-figure-element/Makefile \
w3c/semantics/grouping-content/the-ol-element/Makefile \
w3c/syntax/Makefile \
w3c/syntax/serializing-html-fragments/Makefile \
w3c/dom/Makefile \
w3c/dom/documents/Makefile \
w3c/dom/documents/resource-metadata-management/Makefile \
w3c/editing/Makefile \
w3c/editing/editing-0/Makefile \
w3c/editing/editing-0/contenteditable/Makefile \
w3c/editing/editing-0/making-entire-documents-editable-the-designmode-idl-attribute/Makefile \
w3c/editing/editing-0/spelling-and-grammar-checking/Makefile \
w3c/editing/the-hidden-attribute/Makefile \
semantics/Makefile \
semantics/forms/Makefile \
semantics/forms/the-input-element/Makefile \
semantics/forms/the-datalist-element/Makefile \
semantics/forms/the-fieldset-element/Makefile \
semantics/forms/the-meter-element/Makefile \
semantics/forms/the-output-element/Makefile \
semantics/forms/the-progress-element/Makefile \
semantics/forms/the-select-element/Makefile \
semantics/forms/the-textarea-element/Makefile \
semantics/embedded-content-0/Makefile \
semantics/embedded-content-0/the-track-element/Makefile \
semantics/embedded-content-0/the-iframe-element/Makefile \
semantics/embedded-content-0/the-video-element/Makefile \
semantics/grouping-content/Makefile \
semantics/grouping-content/the-figcaption-element/Makefile \
semantics/grouping-content/the-figure-element/Makefile \
semantics/grouping-content/the-main-element/Makefile \
semantics/interactive-elements/Makefile \
semantics/interactive-elements/the-details-element/Makefile \
semantics/sections/Makefile \
semantics/sections/headings-and-sections/Makefile \
semantics/sections/the-article-element/Makefile \
semantics/sections/the-aside-element/Makefile \
semantics/sections/the-footer-element/Makefile \
semantics/sections/the-header-element/Makefile \
semantics/sections/the-nav-element/Makefile \
semantics/sections/the-body-element/Makefile \
semantics/text-level-semantics/Makefile \
semantics/text-level-semantics/the-a-element/Makefile \
semantics/text-level-semantics/the-mark-element/Makefile \
semantics/text-level-semantics/the-rp-element/Makefile \
semantics/text-level-semantics/the-abbr-element/Makefile \
semantics/text-level-semantics/the-wbr-element/Makefile \
browsers/Makefile \
browsers/history/Makefile \
browsers/history/the-history-interface/Makefile \
browsers/the-window-object/Makefile \
browsers/the-window-object/the-window-object/Makefile \
dom/Makefile \
dom/documents/Makefile \
dom/documents/the-document-object/Makefile \
dom/mutationobserver/Makefile \
rendering/Makefile \
rendering/bindings/Makefile \
rendering/bindings/the-keygen-element-0/Makefile \
common/Makefile \
resources/Makefile \
webrunner/Makefile])
AC_OUTPUT
