AC_INIT([tct-fileapi-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
fileapi/Makefile \
fileapi/w3c/Makefile \
fileapi/w3c/filelist-section/Makefile \
fileapi/w3c/filelist-section/support/Makefile \
fileapi/w3c/support/Makefile \
fileapi/support/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
