AC_INIT([tct-flexiblebox-css3-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
flexiblebox/Makefile \
flexiblebox/support/Makefile \
flexiblebox/csswg/Makefile \
flexiblebox/csswg/reference/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
