AC_INIT([tct-fonts-css3-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
fonts/Makefile \
fonts/support/Makefile \
fonts/csswg/Makefile \
fonts/csswg/reference/Makefile \
fonts/csswg/support/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
