AC_INIT([tct-gumallow-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
gumallow/Makefile \
gumallow/support/Makefile \
gumallow/w3c/Makefile \
gumallow/w3c/mediastreams-as-media-elements/Makefile \
gumallow/w3c/obtaining-local-multimedia-content/Makefile \
gumallow/w3c/obtaining-local-multimedia-content/navigatorusermedia/Makefile \
gumallow/w3c/stream-api/Makefile \
gumallow/w3c/stream-api/introduction/Makefile \
gumallow/w3c/stream-api/mediastream/Makefile \
gumallow/w3c/stream-api/mediastreamtrack/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
