commondir = common resources testkit
SUBDIRS = audio canvas colors csp extra fileapi pagevisibility sandbox sessionhistory svg text touchevent transitions widgetpolicy widgetinterface widgetpackaging ui video notification $(commondir)
docdir = $(prefix)/opt/tct-manual-w3c-tests
dist_doc_DATA = README tests.xml tests.full.xml COPYING
