AC_INIT([tct-manual-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
audio/Makefile \
audio/media/Makefile \
audio/w3c/Makefile \
canvas/w3c/Makefile \
canvas/common/Makefile \
canvas/images/Makefile \
canvas/Makefile \
colors/Makefile \
colors/csswg/Makefile \
csp/Makefile \
csp/support/Makefile \
csp/support/w3c/Makefile \
extra/attributes/Makefile \
extra/attributes/w3c/Makefile \
extra/browsers/Makefile \
extra/browsers/the-window-object/Makefile \
extra/browsers/the-window-object/the-window-object/Makefile \
extra/dom/documents/Makefile \
extra/dom/documents/the-document-object/Makefile \
extra/dom/Makefile \
extra/Makefile \
extra/semantics/forms/Makefile \
extra/semantics/forms/the-textarea-element/Makefile \
extra/semantics/grouping-content/Makefile \
extra/semantics/grouping-content/the-figcaption-element/Makefile \
extra/semantics/grouping-content/the-figure-element/Makefile \
extra/semantics/Makefile \
extra/semantics/text-level-semantics/Makefile \
extra/semantics/text-level-semantics/the-mark-element/Makefile \
extra/w3c/editing/Makefile \
extra/w3c/editing/the-hidden-attribute/Makefile \
extra/w3c/Makefile \
extra/w3c/semantics/grouping-content/Makefile \
extra/w3c/semantics/grouping-content/the-ol-element/Makefile \
extra/w3c/semantics/Makefile \
extra/xhtml5/images/Makefile \
extra/xhtml5/Makefile \
extra/xhtml5/w3c/Makefile \
fileapi/Makefile \
pagevisibility/Makefile \
pagevisibility/w3c/Makefile \
pagevisibility/w3c/support/Makefile \
sandbox/Makefile \
sandbox/w3c/Makefile \
sandbox/w3c/support/Makefile \
sessionhistory/Makefile \
sessionhistory/support/Makefile \
svg/Makefile \
svg/w3c/Makefile \
text/Makefile \
text/webkit/Makefile \
touchevent/Makefile \
touchevent/w3c/Makefile \
transitions/Makefile \
transitions/webkit/Makefile \
transitions/webkit/resources/Makefile \
ui/Makefile \
video/Makefile \
video/media/Makefile \
video/w3c/Makefile \
widgetinterface/Makefile \
widgetinterface/w3c/Makefile \
widgetpackaging/Makefile \
widgetpackaging/w3c/Makefile \
widgetpolicy/Makefile \
widgetpolicy/w3c/Makefile \
notification/Makefile \
notification/support/Makefile \
common/Makefile resources/Makefile testkit/Makefile])
AC_OUTPUT
