commondir = resources testkit
SUBDIRS = messaging $(commondir)
docdir = $(prefix)/opt/tct-messaging-email-tizen-tests
dist_doc_DATA = README tests.xml tests.full.xml NOTICE LICENSE.CC-BY-3.0 LICENSE.Apache-2.0 COPYING
mediadir = $(prefix)/opt/tct-messaging-email-tizen-tests/mediasrc
dist_media_DATA = *.jpg *.mp3
