AC_INIT([tct-multicolumn-css3-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
multicolumn/Makefile \
multicolumn/csswg/Makefile \
multicolumn/csswg/reference/Makefile \
multicolumn/support/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
