##
#
# Authors:
#         Fan, Yugang <yugang.fan@intel.com>
#         Zhang, Zhiqiang <zhiqiang.zhang@intel.com>
#         p.szydelko@samsung.com
#

AC_INIT([tct-namespace-tizen-tests], [2.2.1], [p.szydelko@samsung.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
namespace/Makefile \
namespace/support/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
