AC_INIT([tct-navigationtiming-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
navigationtiming/Makefile \
navigationtiming/support/Makefile \
navigationtiming/w3c/Makefile \
navigationtiming/w3c/support/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
