commondir = resources testkit
SUBDIRS = notification $(commondir)
docdir = $(prefix)/opt/tct-notification-tizen-tests
dist_doc_DATA = tests.xml tests.full.xml NOTICE LICENSE.CC-BY-3.0 LICENSE.Apache-2.0 COPYING
mediadir = $(prefix)/opt/tct-notification-tizen-tests/mediasrc
dist_media_DATA = *.mp3 *.jpg
