##
#
# Authors:
#         Fan, Yugang <yugang.fan@intel.com>
#         Zhang, Zhiqiang <zhiqiang.zhang@intel.com>
#

AC_INIT([tct-privilege-tizen-tests], [2.2.1], [p.szydelko@samsung.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
privilege/Makefile \
privilege/support/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
