##
#
# Authors:
#         Fan, Yugang <yugang.fan@intel.com>
#         Zhang, Zhiqiang <zhiqiang.zhang@intel.com>
#         a.krolikowski@samsung.com
#

AC_INIT([tct-secureelement-tizen-tests], [2.2.1], [a.krolikowski@samsung.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
  secureelement/Makefile \
  secureelement/support/Makefile \
  resources/Makefile \
  testkit/Makefile \
])
AC_OUTPUT
