AC_INIT([tct-selectorslevel2-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
selectorslevel2/Makefile \
selectorslevel2/w3c/Makefile \
selectorslevel2/w3c/submissions/Makefile \
selectorslevel2/w3c/submissions/Opera/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
