AC_INIT([tct-sessionhistory-html5-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
sessionhistory/Makefile \
sessionhistory/support/Makefile \
sessionhistory/w3c/Makefile \
sessionhistory/w3c/cgi/Makefile \
common/Makefile resources/Makefile webrunner/Makefile])
AC_OUTPUT
