AC_INIT([tct-sse-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
sse/Makefile \
sse/support/Makefile \
sse/support/cgi/Makefile \
sse/w3c/dedicated-worker/Makefile \
sse/w3c/Makefile \
sse/w3c/resources/Makefile \
sse/w3c/resources/cgi/Makefile \
sse/w3c/shared-worker/Makefile \
resources/Makefile webrunner/Makefile])
AC_OUTPUT
