commondir = resources webrunner
SUBDIRS = systemsetting $(commondir)
docdir = $(prefix)/opt/tct-systemsetting-tizen-tests
dist_doc_DATA = tests.xml tests.full.xml NOTICE LICENSE.CC-BY-3.0 LICENSE.Apache-2.0 COPYING
mediadir = $(prefix)/opt/tct-systemsetting-tizen-tests/mediasrc
dist_media_DATA = *.mp3 *.jpg
