AC_INIT([tct-touchevent-w3c-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
touchevent/Makefile \
touchevent/support/Makefile \
touchevent/w3c/Makefile \
touchevent/w3c/submission/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
