AC_INIT([tct-transitions-css3-tests], [2.2.1], [zhiqiang.zhang@intel.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_FILES([Makefile \
transitions/Makefile \
transitions/support/Makefile \
transitions/webkit/Makefile \
transitions/webkit/resources/Makefile \
resources/Makefile testkit/Makefile])
AC_OUTPUT
